# BondAr

./: .gitignore  README.md  data.csv  pyproject.toml
src/: __main__.py
src/google_client/: google_client.py
src/settings/: settings.py
tests/: conftest.py  test_api.py  test_cache.py  test_google_client.py
